完成加载动画css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<sl-spin></sl-spin>
+<hr>
 <zc-pagination
         [zcTotal]="total"
         [zcPageSize]="pageSize"
@@ -8,3 +10,4 @@
 <button (click)="addTotal()">addTotal</button>
 <button (click)="addIndex()">addIndex</button>
 {{pageIndex}}
+
