--- a/src/share/components/spin/sl-spin/sl-spin.component.less
+++ b/src/share/components/spin/sl-spin/sl-spin.component.less
@@ -1,3 +1,88 @@
 sl-spin {
   display: block;
 }
+.reset-component() {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  font-variant: tabular-nums;
+  line-height: 1.5;
+  list-style: none;
+  -webkit-font-feature-settings: 'tnum';
+  font-feature-settings: 'tnum';
+}
+@sl-prefix: 'sl';
+@spin-prefix-cls: ~'@{sl-prefix}-spin';
+.@{spin-prefix-cls} {
+  .reset-component;
+  position: absolute;
+  display: none;
+  color: #1890ff;
+  text-align: center;
+  vertical-align: middle;
+  opacity: 0;
+  transition: -webkit-transform .3s cubic-bezier(.78,.14,.15,.86);
+  transition: transform .3s cubic-bezier(.78,.14,.15,.86);
+  transition: transform .3s cubic-bezier(.78,.14,.15,.86),-webkit-transform .3s cubic-bezier(.78,.14,.15,.86);
+  &-spinning {
+    position: static;
+    display: inline-block;
+    opacity: 1;
+  }
+  &-dot {
+    position: relative;
+    display: inline-block;
+    font-size: 20px;
+    width: 20px;
+    height: 20px;
+    &-spin {
+      transform: rotate(45deg);
+      animation: slRotate 1.2s infinite linear;
+    }
+    i {
+      position: absolute;
+      display: block;
+      width: 9px;
+      height: 9px;
+      background-color: #1890ff;
+      border-radius: 100%;
+      transform: scale(0.75);
+      transform-origin: 50% 50%;
+      opacity: 0.3;
+      animation: slSpinMove 1s infinite linear alternate;
+      &:nth-child(1) {
+        top: 0;
+        left: 0;
+      }
+      &:nth-child(2) {
+        top: 0;
+        right: 0;
+        animation-delay: 0.4s;
+      }
+      &:nth-child(3) {
+        right: 0;
+        bottom: 0;
+        animation-delay: 0.8s;
+      }
+      &:nth-child(4) {
+        bottom: 0;
+        left: 0;
+        animation-delay: 1.2s;
+      }
+    }
+
+  }
+}
+
+@keyframes slSpinMove {
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes slRotate {
+  to {
+    transform: rotate(405deg);
+  }
+}
