--- a/src/share/components/scheme-table/sl-td/sl-td.component.html
+++ b/src/share/components/scheme-table/sl-td/sl-td.component.html
@@ -2,6 +2,7 @@
     type="checkbox"
     *ngIf="slSHowCheckbox"
     [disabled]="slDisabled"
-    [(ngModel)] = 'slChecked'
+    [(ngModel)]="slChecked"
+    (ngModelChange)="slCheckedChange.emit($event)"
 >
 <ng-content></ng-content>
