--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<scheme-table [config]="gridOptions"></scheme-table>
+<scheme-table [config]="gridOptions" [data]="listOfData"></scheme-table>
 <hr>
 <sl-spin></sl-spin>
 <hr>
