为每个条数据生成唯一标识$$hashKey

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<scheme-table [config]="gridOptions" [data]="listOfData"></scheme-table>
+<scheme-table [options]="gridOptions" [data]="listOfData" (selectRowsChange)="showRowChange($event)"></scheme-table>
+
 <hr>
+<button type="button" (click)="getRow()">gggg</button>
 <sl-spin></sl-spin>
 <hr>
 <zc-pagination
